--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-favicon": "^2.0.1",
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "path": "^0.12.7",
